# torch_pp

./: README.md
data/: download_mnist.py
data/mnist/: README.rst
torch_pp/: CMakeLists.txt
torch_pp/data/: CMakeLists.txt
torch_pp/data/include/: mnist.hpp
torch_pp/data/src/: mnist.cpp
torch_pp/models/: CMakeLists.txt
torch_pp/models/include/: fcnet.hpp  mlp.hpp
torch_pp/models/src/: mlp.cpp
torch_pp/runner/: train.cpp
